--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "framer-motion": "^10.6.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-tsparticles": "^2.11.0",
+    "tsparticles": "^2.11.1",
+    "tsparticles-slim": "^2.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
