--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
     "framer-motion": "^10.6.0",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-tsparticles": "^2.11.0",
     "tsparticles-slim": "^2.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-next": "^13.5.6",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
