--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.14",
+    "clsx": "^2.1.0",
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^9.0.0",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
   }
