--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "framer-motion": "^10.6.0",
+    "i18next": "^23.8.2",
     "next": "^13.5.6",
+    "next-i18next": "^15.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.3",
     "react-tsparticles": "^2.11.0",
     "tsparticles-slim": "^2.11.1"
   },
