--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/types.d.ts",
+    "src/@types/types.d.ts",
+    "next-i18next.config.js",
   ],
   "exclude": ["node_modules"],
 }
