--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
-    "framer-motion": "^10.6.0",
-    "i18next": "^23.8.2",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
+    "framer-motion": "^11.0.25",
+    "i18next": "^23.11.1",
     "next": "^13.5.6",
     "next-i18next": "^15.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.3",
-    "react-tsparticles": "^2.11.0",
-    "tsparticles-slim": "^2.11.1"
+    "react-i18next": "^14.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.6",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.14",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.75",
+    "@types/react-dom": "^18.2.24",
+    "autoprefixer": "^10.4.19",
     "clsx": "^2.1.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^13.5.6",
-    "eslint-config-prettier": "^9.0.0",
-    "postcss": "^8.4.25",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.3.3"
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.4"
   }
 }
